2-kubernetes-monitoring/web/overlays/pro/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-webapp
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: demo-webapp
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "500Mi"
