2-kubernetes-monitoring/web/overlays/pro/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-webapp-ingress
spec:
  rules:
  - host: demo-webapp.com
